--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -4,6 +4,7 @@
 \usepackage{lipsum}% dummy text
 \usepackage{amsmath}
 \usepackage[compact]{titlesec}
+\usepackage{graphicx}
 
 \setlength{\columnseprule}{0pt}
 \setlength{\parskip}{0pt}
@@ -40,6 +41,14 @@
         \neg[p\wedge q]\equiv\neg p\vee\neg q,\\
         \neg[p\vee q]\equiv\neg p\wedge\neg q.
     \end{align}
+
+    \subsection*{Gates}
+    \includegraphics[width=\linewidth]{not.png}
+    \includegraphics[width=\linewidth]{and.png}
+    \includegraphics[width=\linewidth]{or.png}
+    \includegraphics[width=\linewidth]{nor.png}
+    \includegraphics[width=\linewidth]{xor.png}
+
 
 \end{multicols}
 \end{document}
