--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -49,6 +49,17 @@
     \includegraphics[width=\linewidth]{nor.png}
     \includegraphics[width=\linewidth]{xor.png}
 
+    \subsection*{Definitions}
+    \textbf{Inertial Delay -} time it takes for signal to change value \\
+    \textbf{Transport Delay -} time it takes for signal to travel down wire \\
+    \textbf{Delta Cycle -} concept used to order vents that happen
+    simultaneously \\
+    \textbf{Channel Length Modulation -} shorting of the length of the inverted
+    channel region with increase in drain bias for large drain biases \\
+    \textbf{Velocity Saturation -} carrier velocity reaches maximum value in
+    presence of electric field. \\
+    \textbf{Latch up -} a short circuit in which a low impedance path is
+    created resulting in a parasitic subcircuit that disrupts proper function.\\
 
 \end{multicols}
 \end{document}
