[tests] velocity stauration

--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -60,6 +60,13 @@
     presence of electric field. \\
     \textbf{Latch up -} a short circuit in which a low impedance path is
     created resulting in a parasitic subcircuit that disrupts proper function.\\
+    \textbf{Velocity Saturation -} when a strong enough electric field is
+    applied, the carrier velocity in the semiconductor reaches a maximum value.
+    As the applied electric field increases from that point, the carrier
+    velocity no longer increases because the carriers lose energy through
+    increased levels of interaction with the lattice, by emitting phonons and
+    even photons as soon as the carrier energy is large enough to do so.\\
+
 
 \end{multicols}
 \end{document}
