[test] added elmore's delay

--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -2,12 +2,12 @@
 \usepackage[margin=0.5in]{geometry}
 \usepackage{multicol}
 \usepackage{lipsum}% dummy text
-\usepackage{amsmath}
+\usepackage[fleqn]{amsmath}
 \usepackage[compact]{titlesec}
 
 \setlength{\columnseprule}{0pt}
 \setlength{\parskip}{0pt}
-\setlength{\parindent}{0pt} 
+\setlength{\parindent}{0pt}
 \setlength\abovedisplayskip{0pt}
 \setlength\belowdisplayskip{0pt}
 \setlength{\jot}{0pt}
@@ -26,13 +26,15 @@
     \subsection*{asdfasd}
     asdfasdfasdf
 
-    \section*{Test 2}
-    \subsection*{asdfasd}
-    asdfasdfasdf
-    \subsection*{asdfasd}
-    asdfasdfasdf
-    \subsection*{asdfasd}
-    asdfasdfasdf
+    \section*{Example Test 2}
+    \subsection*{1) Elmore's delay}
+    \begin{flalign*}
+        &\tau_{Di} = \sum_{k=1}^{N} C_{k}*R_{ik} \\
+        &Estimated Delay = \\
+        &\tau_{p} = 0.69*\tau_{Di}
+    \end{flalign*}
+    \subsection*{2) part B}
+    \subsection*{3)}
 
     \section*{General}
     \subsection*{Demorgans Law}
