[test] moved elmores delay under general section
and added rise/fall time eqautions for CMOS gates

--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -27,14 +27,8 @@
     asdfasdfasdf
 
     \section*{Example Test 2}
-    \subsection*{1) Elmore's delay}
-    \begin{flalign*}
-        &\tau_{Di} = \sum_{k=1}^{N} C_{k}*R_{ik} \\
-        &Estimated Delay = \\
-        &\tau_{p} = 0.69*\tau_{Di}
-    \end{flalign*}
-    \subsection*{2) part B}
-    \subsection*{3)}
+    \subsection*{}
+    \subsection*{}
 
     \section*{General}
     \subsection*{Demorgans Law}
@@ -42,6 +36,23 @@
         \neg[p\wedge q]\equiv\neg p\vee\neg q,\\
         \neg[p\vee q]\equiv\neg p\wedge\neg q.
     \end{align}
+    \subsection*{Rise/Fall time}
+    \begin{align}
+        t_{r} = R_{p}C \\
+        t_{f} = R_{n}C \\
+        R_{n} \propto {L_{n} \over W_{n}M_{0_{n}}} \\
+        R_{p} \propto {L_{p} \over W_{p}M_{0_{p}}}
+    \end{align}
+
+    \subsection*{Elmore's delay}
+    \begin{flalign*}
+        &\tau_{Di} = \sum_{k=1}^{N} C_{k}*R_{ik} \\
+        &Estimated Delay = \\
+        &\tau_{p} = 0.69*\tau_{Di}
+    \end{flalign*}
+    \begin{flalign*}
+        &Total Expected Energy = C_{L}*f*{V_{dd}^2}
+    \end{flalign*}
 
 \end{multicols}
 \end{document}
