--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -1,4 +1,4 @@
-\documentclass[10pt,fleqn]{article}
+\documentclass[9pt,fleqn]{article}
 \usepackage[margin=0.5in]{geometry}
 \usepackage{multicol}
 \usepackage{lipsum}% dummy text
@@ -20,40 +20,24 @@
 \begin{document}
 \begin{multicols}{3}
 
-    \section*{Test 1}
-    \subsection*{asdfasd}
-    asdfasdfasdf
-    \subsection*{asdfasd}
-    asdfasdfasdf
-    \subsection*{asdfasd}
-    asdfasdfasdf
-
-    \section*{Example Test 2}
-    \subsection*{}
-    \subsection*{}
-
     \section*{General}
-    \subsection*{Demorgans Law}
+    \textbf{Demorgans Law}
     \begin{flalign*}
         \neg[p\wedge q]\equiv\neg p\vee\neg q,\\
         \neg[p\vee q]\equiv\neg p\wedge\neg q.
     \end{flalign*}
-    \subsection*{Rise/Fall time}
+    \textbf{Rise/Fall time}
     \begin{flalign*}
-        t_{r} = R_{p}C \\
+        t_{r} = R_{p}C ,
         t_{f} = R_{n}C \\
         R_{n} \propto {L_{n} \over W_{n}\mu_{0_{n}}},
         R_{p} \propto {L_{p} \over W_{p}\mu_{0_{p}}}
     \end{flalign*}
-
-    \subsection*{Elmore's delay}
+    \textbf{Elmore's delay}
     \begin{flalign*}
         &\tau_{Di} = \sum_{k=1}^{N} C_{k}*R_{ik} \\
-        &Estimated Delay = \\
-        &\tau_{p} = 0.69*\tau_{Di}
-    \end{flalign*}
-    \begin{flalign*}
-        &Total Expected Energy = C_{L}*f*{V_{dd}^2}
+        &Estimated Delay = \tau_{p} = 0.69*\tau_{Di} \\
+        &Total Expected Energy = C_{L}*f*{{V_{dd}}^2}
     \end{flalign*}
 
     \subsection*{Gates}
@@ -82,20 +66,30 @@
     velocity no longer increases because the carriers lose energy through
     increased levels of interaction with the lattice, by emitting phonons and
     even photons as soon as the carrier energy is large enough to do so.\\
+    \textbf{Hot Carrier -} Either holes or electrons  that have gained very
+    high kinetic energy after being accelerated by a strong electric field in
+    areas of high field intensities within a semiconductor .  Because of high
+    kinetic energy they can get injected and trapped in areas of the device
+    where they shouldn't be.\\
     \textbf{Scan Chain -} is a technique used for testing digital circuits. The
-    flip flops are all connected together as a shift register into a single (or multiple)
-    scan chains. It increases observability and controllability in the design
-    and also helps to reduce the size of the test-set vector. \\
+    flip flops are all connected together as a shift register into a single (or
+    multiple) scan chains. It increases observability and controllability in
+    the design and also helps to reduce the size of the test-set vector. \\
     \textbf{Process gain factor -}
         \begin{flalign*}
             K = \mu \epsilon_{iO_{2}} \over t_{ox}
         \end{flalign*}
-    \textbf{Intrinsic Capacitance - } refers to the internal capacitance of a static
-    gate generated dude to diffusion layers, metal contacts, poly-wires. The parasitic
-    capacitance is proportional to the dimensions of the gate (i.e. W and L of transistor).
-    As we increase the size of the gate, the intrinsic capacitance increases, in turn
-    increasing the delay of the gate. We aim to reduce intrinsic capacitances, but it can
-    never be made '0'.
+    \textbf{Intrinsic Capacitance - } refers to the internal capacitance of a
+    static gate generated dude to diffusion layers, metal contacts, poly-wires.
+    The parasitic capacitance is proportional to the dimensions of the gate
+    (i.e. W and L of transistor).  As we increase the size of the gate, the
+    intrinsic capacitance increases, in turn increasing the delay of the gate.
+    We aim to reduce intrinsic capacitances, but it can never be made '0'.\\
+    \textbf{TSPCR -} True Single Phase Clock Register performs the flip-flop
+    operation with little power and at high speeds. Stores output using
+    capacitance. Will typically not work at static or low clock speeds: given
+    enough time, leakage paths may discharge the parasitic capacitance enough
+    to cause the flip-flop to enter invalid states.
 
 \end{multicols}
 \end{document}
