--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -98,7 +98,9 @@
     operation with little power and at high speeds. Stores output using
     capacitance. Will typically not work at static or low clock speeds: given
     enough time, leakage paths may discharge the parasitic capacitance enough
-    to cause the flip-flop to enter invalid states.
+    to cause the flip-flop to enter invalid states.\\
+    \textbf{Master Slave FF -} Is edge trigged. Two gated D latches in series
+    and and inverting the enable input to one of them.
 
 \end{multicols}
 \end{document}
