[test] added fanout and min path delay equation

--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -47,6 +47,14 @@
   P_{n\_nor}(0)  &= 1-P_{A}(0)P_{B}(0) \\
   P_{p\_nor}(1)  &= P_{A}(0)P_{B}(0)
     \end{flalign*}
+    \textbf{Fan out}
+    \begin{flalign*}
+        f = \sqrt[N]{{C_{L} \over C_{1}}}
+    \end{flalign*}
+    \textbf{Min Path Delay}
+    \begin{flalign*}
+        t_{p} = N*t_{po}*(1 + f)
+    \end{flalign*}
 
     \subsection*{Gates}
     \includegraphics[width=\linewidth]{not.png}
