[tests] inverter threshold

--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -111,7 +111,11 @@
     enough time, leakage paths may discharge the parasitic capacitance enough
     to cause the flip-flop to enter invalid states.\\
     \textbf{Master Slave FF -} Is edge trigged. Two gated D latches in series
-    and and inverting the enable input to one of them.
+    and and inverting the enable input to one of them.\\
+    \textbf{Inverter Threshold -} When the inverter switches value. NMOS pulls
+    the output low, PMOS pulls output high. To increase the threshold,
+    increase the strength of NMOS and/or reduce strength of PMOS. Strengh of
+    MOSFET is W/L (width/length) ratio. Bigger radio = stronger MOSFET.
 
 \end{multicols}
 \end{document}
