--- a/tests/test_2.tex
+++ b/tests/test_2.tex
@@ -112,7 +112,11 @@
     MOSFET is W/L (width/length) ratio. Bigger radio = stronger MOSFET.\\
     \textbf{Method to overcome leakage -} Install keepers at the output of
     circuit. This uses pos feedback to reduce leakage. Keeper = inverter in
-    series with output with output of inverter connected to input of inverter.
+    series with output with output of inverter connected to input of inverter.\\
+    \textbf{Clock Skew -} Spatial variation in temporally equivalent clock
+    edges; deterministic + random, t\_sk. \\
+    \textbf{Clock Jitter -} Temporal variations in consecutive edges of the
+    clock signal; modulation + random noise. Cycle to Cycle (short-term) t\_js.
 
 \end{multicols}
 \end{document}
