[test_3] resized image

--- a/tests/test_3.tex
+++ b/tests/test_3.tex
@@ -122,8 +122,7 @@
     sensitive nodes. Make rise fall times large. Do not run wires together for
     long dist. Use shielding for wires and layers.
 
-    4)
-    \includegraphics[width=\linewidth]{question4.png}
+    4) \includegraphics[width=\linewidth,height=10cm, width=7cm]{question4.png}
 
     5)
         A) What is velocity saturation and what is the effect on the CMOS transistor
